syntax = "proto3";

package peerbeam.control;

option go_package = "github.com/krisapa/peerbeam/proto/compiled/controlpb";

message FileMetadata {
  string transfer_id = 1;
  string file_name = 2;
  int64 file_size = 3;
  bool is_directory = 4;
}

message FileMetadataList {
  string list_id = 1;
  repeated FileMetadata files = 2;
}

message TransferConsent {
  bool consent = 1;
  string reason = 2;
}


